--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,16 @@ python:
   - "pypy"
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install anteater
+install:
+  - pip install anteater
 
-# command to run tests, e.g. python setup.py test
+before_script:
+  - git diff --name-only HEAD^ > ./patch
 
-before_script: git diff --name-only HEAD^ > ./patch
-script: anteater --project antest --patchset ./patch
+script:
+  - anteater --project antest --patchset ./patch
+
+after_failure:
+  - echo "Anteater Build Passed on ($TRAVIS_BRANCH) ($TRAVIS_PULL_REQUEST) ($TRAVIS_TAG)"
+after_success:
+  - echo "Anteater Build Failed on ($TRAVIS_BRANCH) ($TRAVIS_PULL_REQUEST) ($TRAVIS_TAG)"
