no cache dir pip install for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
-  - pip install anteater
+  - pip install anteater --no-cache-dir
 
 before_script:
   - git diff --name-only HEAD^ > ./patch
