Set flag_list in config

--- a/anteater.conf
+++ b/anteater.conf
@@ -1,5 +1,5 @@
 [config]
 reports_dir =  .reports/
 anteater_log = .reports/anteater.log
-master_list =  ./master_list.yaml
+flag_list =  ./flag_list.yaml
 ignore_list =  ./ignore_list.yaml
