append version to see which dist is run

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
 
 before_script:
   - git diff --name-only HEAD^ > ./patch
+  - anteater --version
 
 script:
   - anteater --project antest --patchset ./patch
