--- a/ignore_list.yaml
+++ b/ignore_list.yaml
@@ -11,6 +11,7 @@ file_audits:
   file_contents:
     - ^#
     - git clone.+\.github\.com\lukehinds\/
+    - password
 
 # Any files with the following extensions will not be scanned
 file_ignore:
