--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ before_script:
   - anteater --version
 
 script:
-  - anteater --project antest --patchset ./patch
+  - anteater --ips --urls --bincheck --project antest --patchset ./patch
