--- a/anteater.conf
+++ b/anteater.conf
@@ -4,3 +4,4 @@ reports_dir = %(anteater_files)s.reports/
 anteater_log = %(anteater_files)s/.reports/anteater.log
 flag_list =  %(anteater_files)s/flag_list.yaml
 ignore_list = %(anteater_files)s/ignore_list.yaml
+vt_rate_type = public
