--- a/anteater_files/ignore_list.yaml
+++ b/anteater_files/ignore_list.yaml
@@ -39,4 +39,4 @@ ignore_directories:
 
 # Add your project exception file into here.
 project_exceptions:
-  - antest: anteater_files/b.yaml
+  - antest: anteater_files/antest.yaml
